Fixed some of the menu jumpyness by using fixed width menu images/links

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -53,6 +53,30 @@
 					top:-50px;
 				}
 			}
+			.home{
+				display: block;
+				width: 69px;
+			}
+			.products{
+				display: block;
+				width: 122px;
+			}
+			.portfolio{
+				display: block;
+				width: 126px;
+			}
+			.about{
+				display: block;
+				width: 78px;
+			}
+			.blog{
+				display: block;
+				width: 60px;
+			}
+			.contact{
+				display: block;
+				width: 106px;
+			}
 		}
 		li:last-child{
 			border: none;
